tests/fixtures/valid/fix_call_arg.torel
unit fixtures.fix_call_arg;

proc id_i32(value: Int32) -> Int32 {
    return value;
}

export proc main() -> Int32 {
    fix answer: Int32 = 42;
    return id_i32(answer);
}
