tests/fixtures/invalid/loop_local_does_not_escape.torel
unit fixtures.loop_local_does_not_escape;

export proc main() -> Int32 {
    loop {
        fix answer: Int32 = 42;
        break;
    }

    answer
}
